--- a/MovieTracker/MovieTracker/Properties/launchSettings.json
+++ b/MovieTracker/MovieTracker/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63377",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:51416",
+      "sslPort": 44312
     }
   },
   "profiles": {
@@ -18,7 +18,7 @@
     "MovieTracker": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
