--- a/movietracker.api/movietracker.api/src/main/resources/application.properties
+++ b/movietracker.api/movietracker.api/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:h2:mem:movietrackerdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto = update
 
+# Custom H2 Console URL
+spring.h2.console.path=/h2
