--- a/movietracker.api/movietracker.api/src/main/resources/application.properties
+++ b/movietracker.api/movietracker.api/src/main/resources/application.properties
@@ -3,10 +3,15 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 
 # Custom H2 Console URL
 spring.h2.console.path=/h2
+
+# temporary data storage
+# spring.datasource.url = jdbc:h2:file:/data/sample
+# spring.datasource.url = jdbc:h2:file:C:/data/sample (Windows only)
