--- a/MovieTracker/MovieTracker.Infra/MovieTracker.Infra.csproj
+++ b/MovieTracker/MovieTracker.Infra/MovieTracker.Infra.csproj
@@ -51,13 +51,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Common\DataRequest.cs" />
+    <Compile Include="DataContexts\IDataSource.cs" />
+    <Compile Include="DataContexts\SQLServerDB.cs" />
+    <Compile Include="Data\MItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
