--- a/MovieTracker.API/MovieTracker.Infra/MovieTracker.Infra.csproj
+++ b/MovieTracker.API/MovieTracker.Infra/MovieTracker.Infra.csproj
@@ -52,11 +52,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityConfigurations\WatchlistConfiguration.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MovieTrackerContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respositories\Respository.cs" />
     <Compile Include="Respositories\WatchlistItemRepository.cs" />
     <Compile Include="Respositories\WatchlistRepository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
